[gd_scene load_steps=4 format=3 uid="uid://n6sh60xnfck7"]

[ext_resource type="Script" path="res://nodes/towers/particles/ruler.gd" id="1_qvnic"]
[ext_resource type="Texture2D" uid="uid://cbk58cf2k3pfi" path="res://assets/particles/ruler.png" id="2_72iva"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fvrmh"]
size = Vector2(56, 34)

[node name="ruler" type="Area2D"]
z_index = 8
script = ExtResource("1_qvnic")

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = 4.71238
scale = Vector2(2, 2)
texture = ExtResource("2_72iva")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_fvrmh")

[node name="init" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
autostart = true

[node name="travel" type="Timer" parent="."]
wait_time = 2.0

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="init" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="travel" to="." method="_on_travel_timeout"]
